fix scrollbars and dots showing

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -32,7 +32,6 @@ body {
 }
 
 body {
-  overflow-y: scroll;
   background-color: $colorBackground;
   color: white;
   font-family: "Montserrat", sans-serif;
